Some improvements, removed dunstrc because pywal template is used instead

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,7 +54,7 @@ bind -r C-x kill-window
 bind M-x kill-window -a
 #bind-key M-x command-prompt -p "kill all windows except:" "kill-window -a -t ':%%'"
 
-# split panes with g and v
+# split panes with g,h,v,b
 bind -r g split-window -h -p 50 -c '#{pane_current_path}' # horizontally split active pane to the right
 bind -r v split-window -v -p 50 -c '#{pane_current_path}' # vertically split active pane to the bottom
 bind -r h split-window -hb -p 50 -c '#{pane_current_path}' # horizontally split active pane to the left
@@ -69,8 +69,7 @@ bind -nr C-h select-pane -L
 bind -nr C-j select-pane -D
 bind -nr C-k select-pane -U
 bind -nr C-l select-pane -R
-# The only weakness for the navigation is that Ctrl H is a backspace in Copy Mode. Dirty workaround is prefix key + Y for left
-bind y select-pane -L
+
 #Cycle through window with Alt + Shift + C
 bind -nr M-C select-window -t +
 
@@ -105,11 +104,13 @@ bind Tab swap-pane -t !
 # Swap active pane with the marked pane
 bind C-Tab swap-pane
 
-# bring a pane from a different window to current one
+# bring a pane from a different window to current one (vertically)
 bind-key j command-prompt -p "join pane from:"  "join-pane -d -s ':%%'"
+# same as above, but horizontally
 bind-key J command-prompt -p "join pane from:"  "join-pane -dh -s ':%%'"
-# send a pane to a different window
+# send a pane to a different window (vertically)
 bind-key s command-prompt -p "send pane to:"  "join-pane -d -t ':%%'"
+#same as above, but horizontally
 bind-key S command-prompt -p "send pane to:"  "join-pane -dh -t ':%%'"
 # s was the default for session mode, t will be used instead
 bind-key t choose-tree -s
@@ -121,11 +122,10 @@ bind-key Space set -g status
 #------
 
 # copy mode
-# Vim copy-paste behaviour using the clipboard
+# Vim copy-paste behaviour using the clipboard (REQUIRES xclip)
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe "xclip -selection clipboard -i"
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
-
 # For vi copy mode bindings
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "xclip -selection clipboard -i"
 # For emacs copy mode bindings
