--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,7 @@ set -g mode-keys vi
 # of the same chain and, thus, not require another invocation of the
 # <prefix>.  See the keybindings section below for all actions defined
 # with the `-r` flag.
-set -g repeat-time 300
+set -g repeat-time 200
 
 # Keybinds
 # --------
@@ -132,7 +132,7 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "xclip -selection 
 bind -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe "xclip -selection clipboard -i"
 
 # Another way to scroll up
-bind K copy-mode -u
+bind C-u copy-mode -u
 
 # User interface
 # --------------
