--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -34,7 +34,7 @@ set column_ratios 1,3,4
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 
 # Show hidden files? You can toggle this by typing 'zh'
-set show_hidden false
+set show_hidden true
 
 # Ask for a confirmation when running the "delete" command?
 # Valid values are "always", "never", "multiple" (default)
@@ -422,24 +422,25 @@ map {     traverse_backwards
 map )     jump_non
 
 map g~ cd ~/
-map gh cd ~/
+map gh cd /mnt/hdd
 map go cd ~/.config
-map gs cd ~/storage
+map gs cd /mnt/storage
 map gV cd ~/virt
-map gH cd ~/hdd
+map gH cd ~/
 map gl cd ~/lab
-map gp cd ~/hdd/pictures
-map gw cd ~/hdd/pictures/wallpapers
-map gd cd ~/hdd/downloads
-map gi cd ~/hdd/downloads/images
-map gD cd ~/hdd/documents
-map gN cd ~/hdd/documents/notes
-map gm cd ~/hdd/music
-map gb cd ~/hdd/backup
-map gv cd ~/hdd/videos
+map gp cd /mnt/hdd/pictures
+map gw cd /mnt/hdd/pictures/wallpapers
+map gd cd /mnt/hdd/downloads
+map gi cd /mnt/hdd/downloads/images
+map gD cd /mnt/hdd/documents
+map gN cd /mnt/hdd/documents/notes
+map gm cd /mnt/hdd/music
+map gb cd /mnt/hdd/backup
+map gv cd /mnt/hdd/videos
+map gV cd /mnt/virt
 map ge cd /etc
 map gL cd -r %f
-map gM cd /media
+map gM cd /mnt
 map gr cd /
 map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
