--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -440,7 +440,7 @@ map gv cd /mnt/hdd/videos
 map gV cd /mnt/virt
 map ge cd /etc
 map gL cd -r %f
-map gM cd /mnt
+map gM cd /media
 map gr cd /
 map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
