--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -7,5 +7,5 @@ keep-open=yes
 save-position-on-quit=yes
 sub-ass-vsfilter-blur-compat=yes
 demuxer-mkv-subtitle-preroll=yes
-sub-auto=fuzzy
-scripts=~/.config/mpv/scripts/sub-select.lua:~/.config/mpv/scripts/encode.lua
+sub-auto=all
+scripts=~/.config/mpv/scripts/sub-select.lua:~/.config/mpv/scripts/webm.lua
