--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,8 @@
 ## This configuration is meant to be used on tmux instances that have an active X server and are NOT remote/SSH tmux connections
 ## For example, it enables copy-mode that is piped to xclip and mouse support, which are undesirable in remote instances.
 
+#plugins 
+run-shell ~/.config/plugins/tmux/tmux-open/open.tmux
 # set default shell as bash
 set -g default-shell /bin/bash
 
@@ -41,7 +43,7 @@ set -g repeat-time 200
 set -g prefix M-a
 bind-key M-a last-window
 
-# reload config file
+# unneeded keys unbind o unbind p # reload config file
 unbind r
 bind r source-file ~/.tmux.conf
 
@@ -113,7 +115,11 @@ bind-key s command-prompt -p "send pane to:"  "join-pane -d -t ':%%'"
 #same as above, but horizontally
 bind-key S command-prompt -p "send pane to:"  "join-pane -dh -t ':%%'"
 # s was the default for session mode, t will be used instead
-bind-key t choose-tree -s
+bind-key t choose-tree -swZ
+# pressing c in tree-mode creates a new session
+bind -T root c if -F '#{==:#{pane_mode},tree-mode}' \
+{command-prompt -p 'session name:' 'new-session -ds "%1"'} \
+{send c}
 
 # toggle status bar visibility
 bind-key Space set -g status
@@ -144,6 +150,7 @@ set -g set-titles-string "#T" # title format
 set -g automatic-rename on # name windows with <prefix>, (sessions with <prefix>)
 set -g aggressive-resize on # manpage says "on" is bad for shells…
 set -g alternate-screen on
+set-option -g automatic-rename-format '#{pane_current_command}'
 
 # Start indices from 1 for both windows and panes.  Makes it easier for
 # direct navigation.  Also renumber windows.
@@ -191,7 +198,7 @@ set -g clock-mode-colour "colour2"
 
 ## Interval to update status bar in seconds.  Only affects some elements.
 ## Test on a case-by-case basis.  My setup is not affected.
-#set -g status-interval 120
+set -g status-interval 1
 
 # Status bar
 # ---------
