--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -34,7 +34,7 @@ set column_ratios 1,3,4
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 
 # Show hidden files? You can toggle this by typing 'zh'
-set show_hidden true
+set show_hidden false
 
 # Ask for a confirmation when running the "delete" command?
 # Valid values are "always", "never", "multiple" (default)
@@ -486,6 +486,8 @@ map uy uncut
 map ya copy mode=add
 map yr copy mode=remove
 map yt copy mode=toggle
+
+map <a-m> shell mount .
 
 # Temporary workarounds
 map dgg eval fm.cut(dirarg=dict(to=0), narg=quantifier)
