--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -171,6 +171,7 @@ ext epub, has zathura, X, flag f = zathura -- "$@"
 ext epub, has ebook-viewer, X, flag f = ebook-viewer -- "$@"
 ext mobi, has ebook-viewer, X, flag f = ebook-viewer -- "$@"
 ext cbz, has zathura,X, flag f = zathura -- "$@"
+ext cbr, has zathura,X, flag f = zathura -- "$@"
 
 #-------------------------------------------
 # Image Viewing:
