--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -430,6 +430,7 @@ map gH cd ~/
 map gl cd ~/lab
 map gp cd /mnt/hdd/pictures
 map gw cd /mnt/hdd/pictures/wallpapers
+map gW cd /mnt/hdd/work
 map gd cd /mnt/hdd/downloads
 map gi cd /mnt/hdd/downloads/images
 map gD cd /mnt/hdd/documents
